# C-Libs

./: .gitmodules  README.md
Files/: CMakeCache.txt  CMakeLists.txt  Makefile  TestFiles  cmake_install.cmake
Files/libs/: Strings.h
Files/src/: Files.c
Files/tests/files/: saved_file.txt
Linked List/: CMakeCache.txt  CMakeLists.txt  ListTest  ListTest.c  Makefile  cmake_install.cmake
Linked List/libs/: Strings.h
Linked List/src/: LinkedList.c
Strings/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  StringTests  cmake_install.cmake
Strings/src/: Strings.c  Strings.h
Strings/tests/: tests.c
